added links to homepage

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,20 @@
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <h1>HereItIs!</h1>
+  <a href="artists">Artists</a>
+  <a href="venues">Venues</a>
+  <h2>Upcoming Events:</h2>
+  <ul>
+    <li>September 30, 2024 --
+      <a href="events/event-1">Event 1</a>
+      @ <a href="venues/venue-1">Venue 1</a>
+    <li>October 14, 2024 --
+      <a href="events/event-1">Event 2</a>
+      @ <a href="venues/venue-1">Venue 1</a>
+    <li>October 31, 2024 --
+      <a href="events/event-1">Event 3</a>
+      @ <a href="venues/venue-1">Venue 1</a>
+  </ul>
 </body>
 </html>
